# The-Big-Project

./: .gitignore  Agents.md  Cargo.toml  SENTINEL_PLAN.md  alembic.ini  justfile  pyproject.toml  tmpclaude-d8b6-cwd
.claude/context/: product-context.md  progress.md  project-brief.md  project-overview.md  project-structure.md  project-style-guide.md  project-vision.md  system-patterns.md  tech-context.md
config/: default.toml
crates/netsec-core/: Cargo.toml
crates/netsec-core/src/: config.rs  engine.rs  lib.rs  plugin_registry.rs
crates/netsec-db/: Cargo.toml
crates/netsec-db/src/: lib.rs  migrate.rs  migration.rs  pool.rs  repo.rs  repository.rs
crates/netsec-db/src/repo/: alerts.rs  device_events.rs  devices.rs  observations.rs  ports.rs  scans.rs  scheduled_jobs.rs  traffic.rs  vulnerabilities.rs
crates/netsec-db/tests/: integration.rs
crates/netsec-events/: Cargo.toml
crates/netsec-events/src/: lib.rs
crates/netsec-ffi/: Cargo.toml
crates/netsec-ffi/src/: lib.rs
crates/netsec-gui/: Cargo.toml  build.rs
crates/netsec-gui/assets/webview/: index.html  widget.js  widget.js.map
crates/netsec-gui/src/: app.rs  main.rs  message.rs  theme.rs
crates/netsec-gui/src/api/: client.rs  mod.rs  models.rs  websocket.rs
crates/netsec-gui/src/desktop/: hotkeys.rs  mod.rs  notifications.rs  persistence.rs
crates/netsec-gui/src/state/: mod.rs  network.rs  terminal.rs
crates/netsec-gui/src/views/: alerts.rs  canvas.rs  header.rs  inspector.rs  mod.rs  scans.rs  scheduler.rs  settings.rs  terminal.rs  toolbar.rs  tools.rs  traffic.rs  ui_components.rs  vuln_dashboard.rs
crates/netsec-gui/src/webview/: canvas_webview.rs  ipc.rs  mod.rs
crates/netsec-metadata/: Cargo.toml
crates/netsec-metadata/src/: config.rs  engine.rs  handler.rs  lib.rs  security.rs  types.rs
crates/netsec-metadata/src/handlers/: image_handler.rs  mod.rs
crates/netsec-metadata/src/handlers/image_handler/: exif_parser.rs
crates/netsec-metadata/src/utils/: file_identity.rs  mime_detect.rs  mod.rs
crates/netsec-models/: Cargo.toml
crates/netsec-models/src/: alert.rs  device.rs  error.rs  event.rs  lib.rs  plugin.rs  port.rs  scan.rs  traffic.rs  vulnerability.rs
crates/netsec-parsers/: Cargo.toml
crates/netsec-parsers/src/: lib.rs  nmap.rs  pcap.rs  suricata.rs  zeek.rs
crates/netsec-pipeline/: Cargo.toml
crates/netsec-pipeline/src/: correlation.rs  deduplication.rs  dispatch.rs  lib.rs  normalization.rs  scoring.rs
crates/netsec-pipeline/tests/: integration.rs
crates/netsec-platform/: Cargo.toml
crates/netsec-platform/src/: detect.rs  lib.rs  privileges.rs  service.rs
crates/netsec-pty/: Cargo.toml
crates/netsec-pty/src/: lib.rs  session.rs  shell.rs
crates/netsec-python/: Cargo.toml
crates/netsec-python/src/: lib.rs  parsers.rs
crates/netsec-scanner/: Cargo.toml
crates/netsec-scanner/src/: active.rs  executor.rs  fingerprint.rs  lib.rs  listener.rs  passive.rs
crates/netsec-scanner/tests/: executor_integration.rs  integration.rs
crates/netsec-scheduler/: Cargo.toml
crates/netsec-scheduler/src/: lib.rs
crates/netsec-scheduler/tests/: scheduler_integration.rs
crates/netsec-threat/: Cargo.toml
crates/netsec-threat/src/: arp_spoof.rs  covert_channel.rs  dns_hijack.rs  entropy.rs  evil_twin.rs  lib.rs
data/: oui_reference.json
deploy/docker/: Dockerfile  docker-compose.yml
deploy/systemd/: netsec-orchestrator.service
deploy/windows/: install-service.ps1
frontend/: App.tsx  README.md  index.html  metadata.json  package-lock.json  package.json  types.ts  vite.config.widget.ts
frontend/components/: AlertsDashboard.tsx  ConsolePanel.tsx  Header.tsx  InspectorPanel.tsx  NetworkCanvas.tsx  NetworkConnection.tsx  NetworkNode.tsx  NodeIcon.tsx  OverviewDashboard.tsx  Scanlines.tsx  ScanningOverlay.tsx  SentinelDashboard.tsx  Terminal.tsx  TerminalTabs.tsx  ToolButton.tsx  Toolbar.tsx  VulnerabilitiesWorkspace.tsx  VulnerabilityDashboard.tsx  XTerminal.tsx
frontend/hooks/: useInteraction.ts  useNetwork.ts  usePentest.ts  useScanner.ts  useSystemLogs.ts  useTerminalSession.ts
frontend/services/: api.ts
frontend/utils/: networkUtils.ts
frontend/widget/: index.html  index.tsx
migrations/: env.py
migrations/sql/: 001_create_devices.sql  002_create_ports.sql  003_create_alerts.sql  004_create_scans.sql  005_create_vulnerabilities.sql  006_create_traffic_flows.sql  007_create_device_events.sql  008_create_observations.sql  009_create_scheduled_jobs.sql  010_add_alert_notes.sql  011_add_device_fields.sql  012_add_alert_fields.sql  013_add_vuln_fields.sql  014_create_sentinel_snapshots.sql  015_create_sentinel_file_hashes.sql  016_create_sentinel_auth_events.sql  017_create_sentinel_persistence.sql  018_create_sentinel_baselines.sql  019_create_sentinel_osint.sql
python/netsec/: __main__.py
python/netsec/adapters/: base.py  clamav.py  fail2ban.py  nmap.py  ntopng.py  openvas.py  process.py  sentinel.py  suricata.py  zeek.py
python/netsec/api/: app.py  websocket.py
python/netsec/core/: config.py  events.py  logging.py  scheduler.py  terminal.py
python/netsec/db/: repository.py  session.py
python/netsec/models/: alert.py  base.py  traffic.py
python/netsec/pipeline/: correlation.py  deduplication.py  dispatch.py  normalization.py  severity.py
python/netsec/platform/: detect.py  privileges.py
python/netsec/schemas/: alert.py  common.py  traffic.py  vulnerability.py
python/netsec/sentinel/: __init__.py  alerts.py  cert_monitor.py  collector.py  correlator.py  dnsbl.py  feed_manager.py  reputation.py  vuln_scanner.py
python/netsec/services/: alert_service.py  scan_service.py  (+3 more)
rust/netsec-nmap/: Cargo.toml  pyproject.toml
rust/netsec-nmap/src/: lib.rs  xml_parser.rs
rust/netsec-stream/: Cargo.toml  pyproject.toml
scripts/: install_tools.ps1  install_tools.sh
tests/: conftest.py
tests/fixtures/: README.md  eve_alert.json  eve_malformed.json  eve_mixed.json  eve_sample.json  nmap_empty.xml  nmap_ipv6_host.xml  nmap_malformed.xml  nmap_single_host.xml
tests/integration/: test_api.py
tests/unit/: test_nmap_adapter.py
(+41 files in other folders)
