[package]
name = "netsec-db"
version.workspace = true
edition.workspace = true

[dependencies]
netsec-models = { workspace = true, features = ["sqlx"] }
sqlx = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
