[package]
name = "netsec-metadata"
version.workspace = true
edition.workspace = true
description = "File metadata extraction engine with security analysis for the netsec platform"

[dependencies]
netsec-models = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Image processing
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "tiff", "bmp", "webp"] }
kamadak-exif = "0.5"

# XML parsing (for XMP)
quick-xml = { workspace = true }

# Hashing
sha2 = "0.10"
md-5 = "0.10"
hex = "0.4"

# File detection
mime_guess = "2.0"

[dev-dependencies]
tempfile = "3"
