[package]
name = "netsec-models"
version.workspace = true
edition.workspace = true

[features]
default = []
sqlx = ["dep:sqlx"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
sqlx = { workspace = true, optional = true }
