[package]
name = "netsec-pipeline"
version.workspace = true
edition.workspace = true

[dependencies]
netsec-models = { workspace = true }
netsec-db = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
