[package]
name = "netsec-pipeline"
version.workspace = true
edition.workspace = true

[dependencies]
netsec-models = { workspace = true, features = ["sqlx"] }
netsec-db = { workspace = true }
netsec-events = { workspace = true }
netsec-parsers = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
