[package]
name = "netsec-scanner"
version.workspace = true
edition.workspace = true

[dependencies]
netsec-models = { workspace = true }
netsec-parsers = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
socket2 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
