[package]
name = "netsec-scanner"
version.workspace = true
edition.workspace = true

[dependencies]
netsec-models = { workspace = true, features = ["sqlx"] }
netsec-parsers = { workspace = true }
netsec-db = { workspace = true }
netsec-events = { workspace = true }
netsec-platform = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
socket2 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
