[package]
name = "netsec-scheduler"
version.workspace = true
edition.workspace = true

[dependencies]
netsec-models = { workspace = true }
netsec-db = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
