[package]
name = "netsec-nmap"
version = "0.1.0"
edition = "2021"

[lib]
name = "netsec_nmap"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
quick-xml = { version = "0.36", features = ["serialize"] }
serde = { version = "1", features = ["derive"] }
